# driftwatch

./: .gitignore  README.md  pyproject.toml
src/driftwatch/: __init__.py  cli.py  detector.py
src/driftwatch/parsers/: __init__.py  alembic_parser.py  sqlalchemy_parser.py
tests/: test_detector.py
